--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,16 @@
+server.port=8082
+spring.datasource.url=jdbc:mysql://localhost:3306/just_tech_news_java_db?useSSL=false&serverTimezone=UTC&createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true
+spring.datasource.username=root
+spring.datasource.password=Blossom2012
+#configure the way schema tools manipulate database as start
+spring.jpa.hibernate.ddl-auto=update
+#show sql statements in a readable manner
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+#intialize schema at every start of session
+spring.session.store-type=jdbc
+spring.session.jdbc.initialize-schema=always
+spring.session.timeout.seconds=600
+#embedded GUI console for browsing database and running queries
+spring.h2.console.enabled=true
 
