controllers added with proper spring notations

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,6 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.session.store-type=jdbc
 spring.session.jdbc.initialize-schema=always
 spring.session.timeout.seconds=600
-#embedded GUI console for browsing database and running queries
+#embedded GUI(graphical user interface) console for browsing database and running queries
 spring.h2.console.enabled=true
 
